feat(username&token): added username functionality and some major changes in jwt_token_payload
